# utility-stats

./: .gitignore  .hgignore  Cargo.toml  README.md  build.sbt  deny.toml  electric-billerica.csv  electric-eversource.csv  electric.csv  electric_gen.csv  gas-billerica.csv  gas-eversource.csv  gas.csv  requirements.txt  tempdata.py  test_config.json  test_electric.csv  test_gas.csv  us.py
.github/workflows/: rust.yml
project/: scalapb.sbt
reqs/: numpy-1.10.4+vanilla-cp35-none-win_amd64.whl
rust/: Cargo.toml
rust/src/: darksky.rs  grapher.rs  main.rs  measurement.rs  timed.rs  tmpmgr.rs
src/: config.rs  darksky.rs  grapher.rs  main.rs  measurement.rs  nws.rs  regression.rs  timed.rs  tmpmgr.rs  visual_crossing.rs  weatherclient.rs
src/client/: cache.rs  mod.rs  open_meteo.rs  visual_crossing.rs
src/main/protobuf/: wunderground.proto
src/main/resources/: logback.xml
src/main/scala/xyz/clieb/utilitystats/: AllUtilGrapher.scala  Closable.scala  Grapher.scala  Main.scala  Measurements.scala  TempDataManager.scala  TempType.java  Timed.scala  WundergroundClient.scala
src/main/scala/xyz/clieb/utilitystats/util/: Closable.scala  Timed.scala
src/main/scala/xyz/clieb/utilitystats/wunderground/: Client.scala  HistoryResponse.scala  HistoryResponseParser.scala  Parser.scala  ResponseHeader.scala  RingBuffer.scala
