[package]
name = "utility-stats"
version = "0.1.0"
authors = ["Chris Lieb <chris.lieb@gmail.com>"]
edition = "2021"

[dependencies]
clap = "~4.5"
csv = "~1.3"
env_logger = "~0.11.4"
flate2 = "~1.0"
log = "~0.4"
reqwest = { version="~0.12", features=["blocking", "gzip", "json"] }
rmp-serde = "~1.3"
rusqlite = { version="~0.32", features=["bundled"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
time = { version = "~0.3", features=["serde", "formatting", "macros", "parsing"] }
